<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="org.spontaneous.activities.ActivitySummaryActivity" >

    <!-- <include layout="@layout/comp_save_activity_btn" /> -->

    <LinearLayout
    	android:id="@+id/footer"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_alignParentBottom="true"
    	android:gravity="bottom"
    	style="@android:style/ButtonBar"
    	android:background="@android:color/transparent">

         <Button android:id="@+id/btn_splittimes"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_splittimes"
	        android:background="@color/white"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceLarge"/>

	    <Button android:id="@+id/btn_saveActivity"
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_saveActivity"
	        android:background="@color/lightblue"
	        android:paddingTop="@dimen/activity_vertical_margin"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/white"/>
	</LinearLayout>

    <RelativeLayout
    	android:id="@+id/activityStatistics"
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:background="@android:color/transparent">

        <LinearLayout
    		android:id="@+id/activityStatistics_column"
			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">

		    <TextView android:id="@+id/view_stats_duration_hdr"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:textStyle="bold"
		        android:text="@string/duration" />

		    <TextView android:id="@+id/view_stats_duration"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:paddingBottom="@dimen/activity_vertical_margin" />

		    <include layout="@layout/comp_separatorline" />

		    <TextView android:id="@+id/view_stats_distance_hdr"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
		        android:text="@string/distance"
		        android:textStyle="bold"
		        android:layout_below="@id/view_stats_duration" />

		    <TextView android:id="@+id/view_stats_distance"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:paddingBottom="@dimen/activity_vertical_margin" />

		    <include layout="@layout/comp_separatorline" />

		    <TextView android:id="@+id/view_stats_average_hdr"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
		        android:text="@string/average"
		        android:textStyle="bold"
		        android:layout_below="@id/view_stats_distance"/>

		    <TextView android:id="@+id/view_stats_average"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:paddingBottom="@dimen/activity_vertical_margin"
		        android:text="05:12"
		        android:layout_below="@id/view_stats_distance"/>

		   	<include layout="@layout/comp_separatorline" />

		    <TextView android:id="@+id/view_stats_calories_hdr"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
		        android:text="@string/calories"
		        android:textStyle="bold"
		        android:layout_below="@id/view_stats_average"/>

		    <TextView android:id="@+id/view_stats_calories"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:paddingBottom="@dimen/activity_vertical_margin"
		        android:text="758"
		        android:layout_below="@id/view_stats_average"/>

		    <include layout="@layout/comp_separatorline" />

		</LinearLayout>

	</RelativeLayout>

     <RelativeLayout
    	android:id="@+id/activityStatisticsMap"
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@android:color/transparent"
    	android:layout_toRightOf="@id/activityStatistics"
    	android:layout_above="@+id/footer">

	    <fragment
	        android:name="com.google.android.gms.maps.MapFragment"
	        android:id="@+id/map"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        class="com.google.android.gms.maps.MapFragment"
	        />

    </RelativeLayout>

</RelativeLayout>

